feat: create a basic view for use methods CRUD and simplify cds

--- a/app/odatav4-products/webapp/view/Home.view.xml
+++ b/app/odatav4-products/webapp/view/Home.view.xml
@@ -1,7 +1,54 @@
 <mvc:View controllerName="com.lab2dev.odatav4products.controller.Home"
     xmlns:mvc="sap.ui.core.mvc" displayBlock="true"
-    xmlns="sap.m">
-    <Page id="page" title="{i18n>title}">
-        <Text text="Texto" />
+    xmlns="sap.m"
+    xmlns:table="sap.ui.table">
+    <Page id="page" showHeader="false">
+            <table:Table
+				rows="{/products}"
+				selectionMode="MultiToggle"
+				paste="onPaste"
+				ariaLabelledBy="title">
+                <table:extension>
+					<OverflowToolbar style="Clear">
+						<Title id="title" text="Products"/>
+                        <ToolbarSpacer />
+                        <Button text="POST"  press="onCreateProduct"/>
+                        <Button text="DELETE" press="onDeleteProduct"/>
+                        <Button text="PUT" press="onEditProduct"/>
+					</OverflowToolbar>
+				</table:extension>
+				<table:columns>
+					<table:Column width="25rem">
+						<Label text="Product Id" />
+						<table:template>
+							<Text text="{ID}"/>
+						</table:template>
+					</table:Column>
+					<table:Column width="11rem">
+						<Label text="Product Name" />
+						<table:template>
+							<Text text="{Name}" wrapping="false" />
+						</table:template>
+					</table:Column>
+					<table:Column width="6rem" hAlign="End">
+						<Label text="Quantity" />
+						<table:template>
+							<Label text="{Quantity}" />
+						</table:template>
+					</table:Column>
+					<table:Column width="9rem">
+						<Label text="Description" />
+						<table:template>
+							<Text text="{Description}" />
+						</table:template>
+					</table:Column>
+					<table:Column width="9rem">
+						<Label text="Price" />
+						<table:template>
+							<Text text="{Price}"/>
+						</table:template>
+					</table:Column>
+				</table:columns>
+			</table:Table>
     </Page>
 </mvc:View>
